--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -7,6 +7,8 @@
     margin: 1rem;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card {
