--- a/views/unit.ejs
+++ b/views/unit.ejs
@@ -36,4 +36,118 @@
             </div>
         </div>
     </div>
+
+    <div class="card" id="ch">
+        <div class="card-header">
+            <ion-icon name="chatbubbles-outline"></ion-icon>
+            <h2>Chat</h2>
+        </div>
+        <div class="card-main">
+            <div class="card-queue">
+                <h1>10</h1>
+            </div>
+            <div class="card-stat">
+                <div class="stat">
+                    <div class="stat-number">50%</div>
+                    <div class="stat-text">sla</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">11</div>
+                    <div class="stat-text">agents</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">7%</div>
+                    <div class="stat-text">abd-rate</div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="card-sub">
+            <div class="arrow-up">
+                <ion-icon name="chevron-up-outline"></ion-icon>
+            </div>
+            <div class="center">
+
+            </div>
+            <div class="arrow-down">
+                <ion-icon name="chevron-down-outline"></ion-icon>
+            </div>
+        </div>
+    </div>
+    <div class="card" id="em">
+        <div class="card-header">
+            <ion-icon name="mail-outline"></ion-icon>
+            <h2>E-mail</h2>
+        </div>
+        <div class="card-main">
+            <div class="card-queue">
+                <h1>10</h1>
+            </div>
+            <div class="card-stat">
+                <div class="stat">
+                    <div class="stat-number">50%</div>
+                    <div class="stat-text">sla</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">11</div>
+                    <div class="stat-text">agents</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">7%</div>
+                    <div class="stat-text">abd-rate</div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="card-sub">
+            <div class="arrow-up">
+                <ion-icon name="chevron-up-outline"></ion-icon>
+            </div>
+            <div class="center">
+
+            </div>
+            <div class="arrow-down">
+                <ion-icon name="chevron-down-outline"></ion-icon>
+            </div>
+        </div>
+    </div>
+
+    <div class="card" id="ac">
+        <div class="card-header">
+            <ion-icon name="attach-outline"></ion-icon>
+            <h2>Action</h2>
+        </div>
+        <div class="card-main">
+            <div class="card-queue">
+                <h1>10</h1>
+            </div>
+            <div class="card-stat">
+                <div class="stat">
+                    <div class="stat-number">50%</div>
+                    <div class="stat-text">sla</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">11</div>
+                    <div class="stat-text">agents</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">7%</div>
+                    <div class="stat-text">abd-rate</div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="card-sub">
+            <div class="arrow-up">
+                <ion-icon name="chevron-up-outline"></ion-icon>
+            </div>
+            <div class="center">
+
+            </div>
+            <div class="arrow-down">
+                <ion-icon name="chevron-down-outline"></ion-icon>
+            </div>
+        </div>
+    </div>
+
 </div>
