--- a/views/unit.ejs
+++ b/views/unit.ejs
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="card" id="ph">
         <div class="card-header">
-            <ion-icon name="call-outline"></ion-icon>
             <h2>Phone</h2>
         </div>
         <div class="card-main">
@@ -9,17 +8,17 @@
                 <h1>15</h1>
             </div>
             <div class="card-stat">
-                <div class="stat">
+                <div class="stat sla">
                     <div class="stat-number">30%</div>
-                    <div class="stat-text">sla</div>
+                    <div class="stat-text">daily sla</div>
                 </div>
-                <div class="stat">
+                <div class="stat agents">
                     <div class="stat-number">10</div>
                     <div class="stat-text">agents</div>
                 </div>
-                <div class="stat">
-                    <div class="stat-number">9%</div>
-                    <div class="stat-text">abd-rate</div>
+                <div class="stat lw">
+                    <div class="stat-number"></div>
+                    <div class="stat-text">Longest wait</div>
                 </div>
             </div>
         </div>
@@ -29,7 +28,7 @@
                 <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <div class="center">
-
+                <ion-icon name="call-outline"></ion-icon>
             </div>
             <div class="arrow-down">
                 <ion-icon name="chevron-down-outline"></ion-icon>
@@ -39,7 +38,7 @@
 
     <div class="card" id="ch">
         <div class="card-header">
-            <ion-icon name="chatbubbles-outline"></ion-icon>
+            
             <h2>Chat</h2>
         </div>
         <div class="card-main">
@@ -51,13 +50,13 @@
                     <div class="stat-number">50%</div>
                     <div class="stat-text">sla</div>
                 </div>
-                <div class="stat">
+                <div class="stat agents">
                     <div class="stat-number">11</div>
                     <div class="stat-text">agents</div>
                 </div>
-                <div class="stat">
-                    <div class="stat-number">7%</div>
-                    <div class="stat-text">abd-rate</div>
+                <div class="stat lw">
+                    <div class="stat-number"></div>
+                    <div class="stat-text">Longest wait</div>
                 </div>
             </div>
         </div>
@@ -67,7 +66,7 @@
                 <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <div class="center">
-
+                <ion-icon name="chatbubbles-outline"></ion-icon>
             </div>
             <div class="arrow-down">
                 <ion-icon name="chevron-down-outline"></ion-icon>
@@ -88,13 +87,13 @@
                     <div class="stat-number">50%</div>
                     <div class="stat-text">sla</div>
                 </div>
-                <div class="stat">
+                <div class="stat agents">
                     <div class="stat-number">11</div>
                     <div class="stat-text">agents</div>
                 </div>
-                <div class="stat">
-                    <div class="stat-number">7%</div>
-                    <div class="stat-text">abd-rate</div>
+                <div class="stat lw">
+                    <div class="stat-number"></div>
+                    <div class="stat-text">Longest wait</div>
                 </div>
             </div>
         </div>
@@ -126,13 +125,13 @@
                     <div class="stat-number">50%</div>
                     <div class="stat-text">sla</div>
                 </div>
-                <div class="stat">
+                <div class="stat agents">
                     <div class="stat-number">11</div>
                     <div class="stat-text">agents</div>
                 </div>
-                <div class="stat">
-                    <div class="stat-number">7%</div>
-                    <div class="stat-text">abd-rate</div>
+                <div class="stat lw">
+                    <div class="stat-number"></div>
+                    <div class="stat-text">Longest wait</div>
                 </div>
             </div>
         </div>
@@ -151,3 +150,7 @@
     </div>
 
 </div>
+
+<script>
+    let key = '<%= pageTitle %>'
+</script>
