--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" 
+      type="image/png" 
+      href="/images/icon.png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <script defer src="/socket.io/socket.io.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script defer src="/js/script.js"></script>
     <title>DASHBOARD</title>
 </head>
