--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,7 @@
         </nav>
     </header>
     <%- body %>
+    <script src="/js/card.js"></script>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 </html>
