--- a/views/unit.ejs
+++ b/views/unit.ejs
@@ -1,153 +1,9 @@
 <div class="container">
-    <div class="card" id="ph">
-        <div class="card-header">
-            <h2>Phone</h2>
-        </div>
-        <div class="card-main">
-            <div class="card-queue">
-                <h1>15</h1>
-            </div>
-            <div class="card-stat">
-                <div class="stat sla">
-                    <div class="stat-number">30%</div>
-                    <div class="stat-text">daily sla</div>
-                </div>
-                <div class="stat agents">
-                    <div class="stat-number">10</div>
-                    <div class="stat-text">agents</div>
-                </div>
-                <div class="stat lw">
-                    <div class="stat-number"></div>
-                    <div class="stat-text">Longest wait</div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="card-sub">
-            <div class="arrow-up">
-                <ion-icon name="chevron-up-outline"></ion-icon>
-            </div>
-            <div class="center">
-                <ion-icon name="call-outline"></ion-icon>
-            </div>
-            <div class="arrow-down">
-                <ion-icon name="chevron-down-outline"></ion-icon>
-            </div>
-        </div>
-    </div>
 
-    <div class="card" id="ch">
-        <div class="card-header">
-            
-            <h2>Chat</h2>
-        </div>
-        <div class="card-main">
-            <div class="card-queue">
-                <h1>10</h1>
-            </div>
-            <div class="card-stat">
-                <div class="stat">
-                    <div class="stat-number">50%</div>
-                    <div class="stat-text">sla</div>
-                </div>
-                <div class="stat agents">
-                    <div class="stat-number">11</div>
-                    <div class="stat-text">agents</div>
-                </div>
-                <div class="stat lw">
-                    <div class="stat-number"></div>
-                    <div class="stat-text">Longest wait</div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="card-sub">
-            <div class="arrow-up">
-                <ion-icon name="chevron-up-outline"></ion-icon>
-            </div>
-            <div class="center">
-                <ion-icon name="chatbubbles-outline"></ion-icon>
-            </div>
-            <div class="arrow-down">
-                <ion-icon name="chevron-down-outline"></ion-icon>
-            </div>
-        </div>
-    </div>
-    <div class="card" id="em">
-        <div class="card-header">
-            <ion-icon name="mail-outline"></ion-icon>
-            <h2>E-mail</h2>
-        </div>
-        <div class="card-main">
-            <div class="card-queue">
-                <h1>10</h1>
-            </div>
-            <div class="card-stat">
-                <div class="stat">
-                    <div class="stat-number">50%</div>
-                    <div class="stat-text">sla</div>
-                </div>
-                <div class="stat agents">
-                    <div class="stat-number">11</div>
-                    <div class="stat-text">agents</div>
-                </div>
-                <div class="stat lw">
-                    <div class="stat-number"></div>
-                    <div class="stat-text">Longest wait</div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="card-sub">
-            <div class="arrow-up">
-                <ion-icon name="chevron-up-outline"></ion-icon>
-            </div>
-            <div class="center">
-
-            </div>
-            <div class="arrow-down">
-                <ion-icon name="chevron-down-outline"></ion-icon>
-            </div>
-        </div>
-    </div>
-
-    <div class="card" id="ac">
-        <div class="card-header">
-            <ion-icon name="attach-outline"></ion-icon>
-            <h2>Action</h2>
-        </div>
-        <div class="card-main">
-            <div class="card-queue">
-                <h1>10</h1>
-            </div>
-            <div class="card-stat">
-                <div class="stat">
-                    <div class="stat-number">50%</div>
-                    <div class="stat-text">sla</div>
-                </div>
-                <div class="stat agents">
-                    <div class="stat-number">11</div>
-                    <div class="stat-text">agents</div>
-                </div>
-                <div class="stat lw">
-                    <div class="stat-number"></div>
-                    <div class="stat-text">Longest wait</div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="card-sub">
-            <div class="arrow-up">
-                <ion-icon name="chevron-up-outline"></ion-icon>
-            </div>
-            <div class="center">
-
-            </div>
-            <div class="arrow-down">
-                <ion-icon name="chevron-down-outline"></ion-icon>
-            </div>
-        </div>
-    </div>
+    <queue-card name="Phone" id="ph" icon="call-outline"></queue-card>
+    <queue-card name="Chat" id="ch" icon="chatbubbles-outline"></queue-card>
+    <queue-card name="Email" id="em" icon="mail-outline"></queue-card>
+    <queue-card name="Action" id="ac" icon="attach-outline"></queue-card>
 
 </div>
 
