--- a/public/css/card.css
+++ b/public/css/card.css
@@ -32,8 +32,8 @@ body {
   display: grid;
   -ms-grid-columns: 5fr 1fr;
       grid-template-columns: 5fr 1fr;
-  -ms-grid-rows: 1fr 4fr;
-      grid-template-rows: 1fr 4fr;
+  -ms-grid-rows: 1fr 5fr;
+      grid-template-rows: 1fr 5fr;
       grid-template-areas: "heading sub" "main sub";
   border-radius: 0.5rem;
   background: #fff;
@@ -59,7 +59,6 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: heading;
-  margin: 0.2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -83,8 +82,8 @@ body {
   grid-area: main;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 3fr 1fr;
-      grid-template-rows: 3fr 1fr;
+  -ms-grid-rows: 3fr 1.5fr;
+      grid-template-rows: 3fr 1.5fr;
       grid-template-areas: "queue" "stat";
 }
 
@@ -106,6 +105,36 @@ body {
 .card .card-main .card-queue h1 {
   color: #141b4d;
   font-size: 4rem;
+}
+
+.card .card-main .card-table {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+  margin: 0.5rem 0;
+}
+
+.card .card-main .card-table table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+.card .card-main .card-table th {
+  font-size: 13px;
+}
+
+.card .card-main .card-table td {
+  font-size: 12px;
+}
+
+.card .card-main .card-table th.name {
+  width: 100px;
+}
+
+.card .card-main .card-table td.name {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .card .card-main .card-stat {
