--- a/public/css/card.scss
+++ b/public/css/card.scss
@@ -16,7 +16,7 @@
     height: 200px;
     display: grid;
     grid-template-columns: 5fr 1fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 1fr 5fr;
     grid-template-areas: 
         "heading sub"
         "main sub";
@@ -40,7 +40,6 @@
     .card-header {
 
         grid-area: heading;
-        margin: 0.2rem;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -53,7 +52,7 @@
         z-index: -1;
         grid-area: main;
         display: grid;
-        grid-template-rows: 3fr 1fr;
+        grid-template-rows: 3fr 1.5fr;
         grid-template-areas: 
             "queue"
             "stat";
@@ -66,6 +65,30 @@
                 color: $brand-color;
                 font-size: 4rem;
             }
+        }
+        .card-table {
+            grid-row: 1 / 3;
+            margin: 0.5rem 0;
+            table {
+                width: 100%;
+                table-layout: fixed;
+
+            }
+            th {
+                font-size: 13px;
+            }
+            td {
+                font-size: 12px;
+            }
+            th.name {
+                width: 100px;
+            }
+            td.name {
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden
+            }
+
         }
         .card-stat {
             grid-area: stat;
