--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,7 @@
             </div>
             <div class="navitems no-anim closed">
                 <ul>
+                    <li class="wide"><a href="/">Nordic</a></li>
                     <li><a href="/denmark">Denmark</a></li>
                     <li class="disabled"><a href="#">Finland</a></li>
                     <li class="disabled"><a href="#">Norway</a></li>
