--- a/views/root.ejs
+++ b/views/root.ejs
@@ -1,1 +1,12 @@
-Hello World
+<div class="container">
+    <summary-card name="Denmark" id="dk" icon="grid" showLoader="true"></summary-card>
+    <summary-card name="Finland" id="fi" icon="grid"></summary-card>
+    <summary-card name="Norway" id="no" icon="grid"></summary-card>
+    <summary-card name="Sweden" id="se" icon="grid"></summary-card>
+    <summary-card name="Helpdesk" id="thd" icon="grid"></summary-card>
+    <summary-card name="Kitchen" id="ki" icon="grid"></summary-card>
+</div>
+
+<script>
+    let key = 'nordic'
+</script>
