--- a/views/unit.ejs
+++ b/views/unit.ejs
@@ -8,12 +8,12 @@
         <queue-card name="Phone" id="ph" icon="call-outline" showLoader=true hide-channel-abbr=true></queue-card>
         <queue-card name="Chat" id="ch" icon="chatbubbles-outline" hide-channel-abbr=true></queue-card>
         <queue-card name="Email" id="em" icon="mail-outline" hide-channel-abbr=true trim-away="Kitchen"></queue-card>
-        <queue-card name="Action" id="ac" icon="attach-outline" hide-channel-abbr=true></queue-card>
+        <queue-card name="Action" id="ac" icon="document-attach-outline" hide-channel-abbr=true></queue-card>
     <% } else { %>
         <queue-card name="Phone" id="ph" icon="call-outline" showLoader=true hide-country-abbr=true hide-channel-abbr=true></queue-card>
         <queue-card name="Chat" id="ch" icon="chatbubbles-outline" hide-country-abbr=true hide-channel-abbr=true></queue-card>
         <queue-card name="Email" id="em" icon="mail-outline" hide-country-abbr=true hide-channel-abbr=true></queue-card>
-        <queue-card name="Action" id="ac" icon="attach-outline" hide-country-abbr=true hide-channel-abbr=true></queue-card>
+        <queue-card name="Action" id="ac" icon="document-attach-outline" hide-country-abbr=true hide-channel-abbr=true></queue-card>
     <% } %>
     
 
