--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,7 @@
                     <li><a href="/denmark">Denmark</a></li>
                     <li class="disabled"><a href="#">Finland</a></li>
                     <li class="disabled"><a href="#">Norway</a></li>
-                    <li class="disabled"><a href="#">Sweden</a></li>
+                    <li><a href="/sweden">Sweden</a></li>
                     <li><a href="/helpdesk">Helpdesk</a></li>
                     <li><a href="/kitchen">Kitchen&Interior</a></li>
                 </ul>
